change theme button

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
     <Title> Батя, Бернский зенненхунд </Title>
-</head>
 
+</head>
+<div class="container light_theme">
 <body>
     <nav>
 
         <header>
             <ul>
-                <li> Основная страница </li>
+                <li> <a href="#">Основная страница</a></li>
                 <li> <a href="contacts.html" title="Контактная информация"> Контакты </a> </li>
                 <li> <a href="video.html" title="веселые видосики"> Видео </a> </li>
                 <li> <a href="index.html#Знакомство"> Знакомство </a></li>
@@ -32,7 +34,7 @@
     </nav>
 
     <main>
-
+<button class="changeTheme" type="button">перейти на темную сторону</button>
         <h1> О моей собаке </h1>
 
         <section>
@@ -72,8 +74,8 @@
     <footer>
         <p>©Моё, 2050. Все права защищены.</p>
     </footer>
-
+<script src="javascript.js/js.js"></script>
 </body>
-
+</div>
 
 </html>
